app/styles/codemirror.styl
@import 'variables'
@import 'mixins'
@import 'nib'

left-margin = 16px

.code-style
  font-family: "Menlo","Courier New","Terminal", monospace
  font-size: 16px
  line-height: 23px
  -webkit-font-smoothing: initial

.CodeMirror
  background-color: transparent
  margin: 24px horizontal-padding 22px left-margin
  transist: all
  @extend .code-style
  pre
    padding: 0
  .CodeMirror-placeholder
    color: #E0E2E6
.CodeMirror-lines
  padding: 0
.CodeMirror-gutters
  border: none
  border-right: 10px solid transparent
  background-color: transparent
.CodeMirror-linenumber
  padding: 0
  color: #E0E2E5
  opacity: 1
.CodeMirror
  height: auto
.CodeMirror-scroll
  overflow-x: auto
  max-height: 140px
.CodeMirror div.CodeMirror-cursor
  border-left: 11px solid rgba(155, 157, 162, 0.37)
  z-index: 3

.CodeMirror
  &.cm-s-neo, &.cm-s-css
    color: #2E383C
    .cm-keyword
      color: #3498DB
    .cm-atom
      color: #9B59B6
    .cm-node
      color: #E74C3C
    .cm-string
      color: #E67E22
    .cm-variable
      color: #1ABC9C

.prompt
  absolute: top 24px left (left-margin + 9px)
  color: #93969b
  opacity: 0

.one-line
  .prompt
    opacity: 1
  .CodeMirror .CodeMirror-linenumber
    opacity: 0
  .CodeMirror .CodeMirror-code *
    color: #7B7F89

